# PRS0126

./: README.md
1.clase/: .gitignore  CMakeLists.txt  main.c
1.clase/1.ejercicios/: cajero.c  clasepunteros.c  delivery.c  generadortablas.c
1.clase/EjerciciosPorTema/: 1_constantes.c  1_constantesPI.c  2_recursividad.c  3_preprocesadorifdef.c  4_punteros_varios.c  ambitos.c  pasoporreferencia.c  punterosyreferencia.c
ejemplogit/: ejemplos.txt
